// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interpreter 1`] = `
Object {
  "action": Array [
    "sold",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "0xdcde sold 71782049366433048 ETH of KINGDOM on Uniswap V2",
  "extra": Object {
    "ethValueReceived": "71782049366433048",
    "tokenAmount": "458161051962122",
    "tokenName": "KINGDOM",
  },
  "gasPaid": "0.03127220866447174",
  "nativeValueReceived": "0.39495711579265108115",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1638316845,
  "tokensReceived": Array [],
  "tokensSent": Array [
    Object {
      "address": "0x9273b71cfd60e022c2107d5bcf5ee62a88346550",
      "amount": "0.000458161052",
      "name": "Kingdom Token",
      "symbol": "KINGDOM",
      "type": "ERC20",
    },
  ],
  "txHash": "0xd7be990f8849ec0b74d86fbda86eaf4c0cb25b814fb1ab9d2f056705b2fdfba6",
  "userAddress": "0xdcdee85472e19a9a1bba1b9c524c6105c727f3d6",
  "userName": "0xdcde",
}
`;

exports[`Interpreter 2`] = `
Object {
  "action": Array [
    "bought",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "thememelord.eth bought 1 ETH of HOGE on Uniswap V2",
  "extra": Object {
    "tokenAmount": "11567525892826453",
    "tokenName": "HOGE",
  },
  "gasPaid": "0.023564857708634499",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "1",
  "reverted": null,
  "timestamp": 1638316845,
  "tokensReceived": Array [
    Object {
      "address": "0xfad45e47083e4607302aa43c65fb3106f1cd7607",
      "amount": "0.011567525893",
      "name": "hoge.finance",
      "symbol": "HOGE",
      "type": "ERC20",
    },
  ],
  "tokensSent": Array [],
  "txHash": "0x32706fd90e141319710989feb555d6c9e394b1788802df6281d257cda0701c84",
  "userAddress": "0x10fced9a7c5d1ae7186d5e5912b73d47c1283d65",
  "userName": "thememelord.eth",
}
`;

exports[`Interpreter 3`] = `
Object {
  "action": Array [
    "swapped",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "0x4090 swapped 900000000 USDC for 202899041047771 KINGDOM on Uniswap V2",
  "extra": Object {
    "tokenAmount0": "900000000",
    "tokenAmount1": "202899041047771",
    "tokenName0": "USDC",
    "tokenName1": "KINGDOM",
  },
  "gasPaid": "0.026273653630187205",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1638316845,
  "tokensReceived": Array [
    Object {
      "address": "0x9273b71cfd60e022c2107d5bcf5ee62a88346550",
      "amount": "0.000202899041",
      "name": "Kingdom Token",
      "symbol": "KINGDOM",
      "type": "ERC20",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "900.0",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "txHash": "0xb684992cdec31d2eeaf3866be82ddd2a9cfe2211bab96b1aa132d3a9ae50587b",
  "userAddress": "0x4090bd947f70b9b8c9522faa0d2f7f9bbb4b2377",
  "userName": "0x4090",
}
`;

exports[`Interpreter 4`] = `
Object {
  "action": Array [
    "added liquidity",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "0x8b7b added liquidity to the ACYC-ETH Uniswap V2 pool",
  "extra": Object {
    "token_0": "ACYC",
  },
  "gasPaid": "0.037819919756787315",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "10",
  "reverted": null,
  "timestamp": 1638316877,
  "tokensReceived": Array [
    Object {
      "address": "0xc7b7dac697b03e11e4af085d927f0c9b24b3f27d",
      "amount": "3162277.660168379545",
      "name": "Uniswap V2",
      "symbol": "UNI-V2",
      "type": "LPToken",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0xb56a1f3310578f23120182fb2e58c087efe6e147",
      "amount": "1000000000000.0",
      "name": "AllCoinsYieldCapital",
      "symbol": "ACYC",
      "type": "ERC20",
    },
  ],
  "txHash": "0xb78ce1e0f55e78cf005b4b5af9978b3d20292dc8c88c94f7ecade67083e2b97f",
  "userAddress": "0x8b7b8448243559a5daa98a22cb6982796bce4271",
  "userName": "0x8b7b",
}
`;

exports[`Interpreter 5`] = `
Object {
  "action": Array [
    "removed liquidity",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "0x888a removed liquidity from the KAKASHI-WETH Uniswap V2 pool",
  "extra": Object {
    "token_0": "KAKASHI",
    "token_1": "WETH",
  },
  "gasPaid": "0.029644983060867926",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1638318188,
  "tokensReceived": Array [
    Object {
      "address": "0xb7b284c2ea09c637daa2f128a8756280a9bd9091",
      "amount": "0.001868562428",
      "name": "Kakashi",
      "symbol": "KAKASHI",
      "type": "ERC20",
    },
    Object {
      "address": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
      "amount": "4.356835431802",
      "name": "Wrapped Ether",
      "symbol": "WETH",
      "type": "unknown",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0xbe2cee7429e427c262e73ea074bef59c6ad1d93b",
      "amount": "0.093937438885",
      "name": "Uniswap V2",
      "symbol": "UNI-V2",
      "type": "LPToken",
    },
  ],
  "txHash": "0x967963d6eaad9e65d567cac325728d79aeaa319b1453e05ec55734f3b08445ec",
  "userAddress": "0x888ae876e588cd29715ab2b4a6ecce0bc2e44655",
  "userName": "0x888a",
}
`;

exports[`Interpreter 6`] = `
Object {
  "action": Array [
    "removed liquidity",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "0xc712 removed liquidity from the SAND-ETH Uniswap V2 pool",
  "extra": Object {
    "ethValueReceived": "6538029747179976387",
    "token_0": "SAND",
  },
  "gasPaid": "0.032858980114895286",
  "nativeValueReceived": "6.53802974717997642529",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1638318377,
  "tokensReceived": Array [
    Object {
      "address": "0x3845badade8e6dff049820680d1f14bd3903a5d0",
      "amount": "4456.80372126116",
      "name": "SAND",
      "symbol": "SAND",
      "type": "ERC20",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0x3dd49f67e9d5bc4c5e6634b3f70bfd9dc1b6bd74",
      "amount": "123.932818358485",
      "name": "Uniswap V2",
      "symbol": "UNI-V2",
      "type": "LPToken",
    },
  ],
  "txHash": "0x3dd8f41c008a6ce59ca8d2b24df700dc4441d0a83747b9b7c0587449a2e7c9ca",
  "userAddress": "0xc712b31175906564bb41a7b84169bd4a9b522011",
  "userName": "0xc712",
}
`;

exports[`Interpreter 7`] = `
Object {
  "action": Array [
    "bought",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7f268357a8c2552623316e2562d90e642bb538e5",
  "contractName": "OpenSea",
  "counterpartyName": null,
  "exampleDescription": "0x96a6 bought The Ninja Hideout #228 on OpenSea for 0.05 ETH",
  "extra": Object {
    "NFT": "The Ninja Hideout",
    "tokenId": "#228",
  },
  "gasPaid": "0.00837078350034528",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0.05",
  "reverted": null,
  "timestamp": 1656089719,
  "tokensReceived": Array [
    Object {
      "address": "0x97e41d5ce9c8cb1f83947ef82a86e345aed673f3",
      "name": "The Ninja Hideout",
      "symbol": "TNH",
      "tokenId": "228",
      "type": "ERC721",
    },
  ],
  "tokensSent": Array [],
  "txHash": "0xc814cb6b61222beda8a9bcc359e776e72ae732a1c29df572099ecef27c8461e4",
  "userAddress": "0x96a675775b8546a8602a1015efaacbc87358e478",
  "userName": "0x96a6",
}
`;

exports[`Interpreter 8`] = `
Object {
  "action": Array [
    "sold",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7f268357a8c2552623316e2562d90e642bb538e5",
  "contractName": "OpenSea",
  "counterpartyName": null,
  "exampleDescription": "0x83eb sold The Ninja Hideout #228 on OpenSea for 0.04624999999999999944 ETH",
  "extra": Object {
    "NFT": "The Ninja Hideout",
    "tokenId": "#228",
  },
  "gasPaid": "0.00837078350034528",
  "nativeValueReceived": "0.04624999999999999944",
  "nativeValueSent": "0.0",
  "reverted": null,
  "timestamp": 1656089719,
  "tokensReceived": Array [],
  "tokensSent": Array [
    Object {
      "address": "0x97e41d5ce9c8cb1f83947ef82a86e345aed673f3",
      "name": "The Ninja Hideout",
      "symbol": "TNH",
      "tokenId": "228",
      "type": "ERC721",
    },
  ],
  "txHash": "0xc814cb6b61222beda8a9bcc359e776e72ae732a1c29df572099ecef27c8461e4",
  "userAddress": "0x83eb387c8f7c8903f2be1ca367197fc4b3cb573e",
  "userName": "0x83eb",
}
`;

exports[`Interpreter 9`] = `
Object {
  "action": Array [
    "repaid",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7d2768de32b0b80b7a3454c06bdac94a69ddc7a9",
  "contractName": "Aave V2",
  "counterpartyName": null,
  "exampleDescription": "0xd8a3 repaid 314305817611832341382659 CRV to Aave V2",
  "extra": Object {
    "tokenAmount": "314305817611832341382659",
    "tokenSymbol": "CRV",
  },
  "gasPaid": "0.012144212798965408",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1656357349,
  "tokensReceived": Array [],
  "tokensSent": Array [
    Object {
      "address": "0x00ad8ebf64f141f1c81e9f8f792d3d1631c6c684",
      "amount": "314305.817611832346",
      "name": "Aave variable debt bearing CRV",
      "symbol": "variableDebtCRV",
      "type": "ERC20",
    },
    Object {
      "address": "0xd533a949740bb3306d119cc777fa900ba034cd52",
      "name": "Curve DAO Token",
      "symbol": "CRV",
      "type": "unknown",
    },
  ],
  "txHash": "0xdf2f782ab0296121318cca140ef069f9f074c51ff4b11f0c677bcb01126f81de",
  "userAddress": "0xd8a3785869f3fc0f0019ec8e9f649b4c43a33383",
  "userName": "0xd8a3",
}
`;

exports[`Interpreter 10`] = `
Object {
  "action": Array [
    "deposited",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7d2768de32b0b80b7a3454c06bdac94a69ddc7a9",
  "contractName": "Aave V2",
  "counterpartyName": null,
  "exampleDescription": "0x88a9 deposited 2800000000 USDT into Aave V2",
  "extra": Object {
    "tokenAmount": "2800000000",
    "tokenSymbol": "USDT",
  },
  "gasPaid": "0.015157096544929638",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1656358062,
  "tokensReceived": Array [
    Object {
      "address": "0x3ed3b47dd13ec9a98b44e6204a523e766b225811",
      "amount": "0.0000000028",
      "name": "Aave interest bearing USDT",
      "symbol": "aUSDT",
      "type": "ERC20",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
      "amount": "2800.0",
      "name": "Tether USD",
      "symbol": "USDT",
      "type": "ERC20",
    },
  ],
  "txHash": "0x24ee705da17a6061091880f47335d92950c72398980e271cdb9c69e8502827f4",
  "userAddress": "0x88a902adc0ff5bfe283d8d2365b51de6bc5e1666",
  "userName": "0x88a9",
}
`;

exports[`Interpreter 11`] = `
Object {
  "action": Array [
    "swapped",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x68b3465833fb72a70ecdf485e0e4c7bd8665fc45",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x5596 swapped 280376616698 USDC for 150286887655178993883 WETH on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "280376616698",
    "tokenAmount1": "150286887655178993883",
    "tokenName0": "USDC",
    "tokenName1": "WETH",
  },
  "gasPaid": "0.07226057005959764",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1654532279,
  "tokensReceived": Array [
    Object {
      "address": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
      "amount": "150.286887655179",
      "name": "Wrapped Ether",
      "symbol": "WETH",
      "type": "unknown",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "280376.616697999998",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "txHash": "0xe4737f2b6174dfcc9482a50aacdc0a919f12c14ede767d6dbfc2cd502747e4f5",
  "userAddress": "0x55961e9fc41c07c13ec0c7103b3d34c0ae32c2eb",
  "userName": "0x5596",
}
`;

exports[`Interpreter 12`] = `
Object {
  "action": Array [
    "swapped",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xe592427a0aece92de3edee1f18e0157c05861564",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x7691 swapped 115000000000000000000 BYTES for 189236064 USDC on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "115000000000000000000",
    "tokenAmount1": "189236064",
    "tokenName0": "BYTES",
    "tokenName1": "USDC",
  },
  "gasPaid": "0.01376121884064768",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1656530683,
  "tokensReceived": Array [
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "189.236064",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0x7d647b1a0dcd5525e9c6b3d14be58f27674f8c95",
      "amount": "115.0",
      "name": "BYTES",
      "symbol": "BYTES",
      "type": "ERC20",
    },
  ],
  "txHash": "0xf41a45f5347db0d95bfac48325f8272dce56782574e91083e5025324928bc40c",
  "userAddress": "0x76914474c1e922aa1166b1d073373b3b1a2dab47",
  "userName": "0x7691",
}
`;

exports[`Interpreter 13`] = `
Object {
  "action": Array [
    "swapped",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x68b3465833fb72a70ecdf485e0e4c7bd8665fc45",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x613a swapped 2127028966431723238 WETH for 200000000000000000000 Metis on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "2127028966431723238",
    "tokenAmount1": "200000000000000000000",
    "tokenName0": "WETH",
    "tokenName1": "Metis",
  },
  "gasPaid": "0.00946193638459496",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1654095700,
  "tokensReceived": Array [
    Object {
      "address": "0x9e32b13ce7f2e80a01932b42553652e053d6ed8e",
      "amount": "200.0",
      "name": "Metis Token",
      "symbol": "Metis",
      "type": "ERC20",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
      "amount": "2.127028966432",
      "name": "Wrapped Ether",
      "symbol": "WETH",
      "type": "unknown",
    },
  ],
  "txHash": "0xce57de79e8898075e6512492b47661abd8e74eeffe4760cd43c054b53480b583",
  "userAddress": "0x613a3870f58893d760e942d0f9ec2e3f1772d336",
  "userName": "0x613a",
}
`;

exports[`Interpreter 14`] = `
Object {
  "action": Array [
    "swapped",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x68b3465833fb72a70ecdf485e0e4c7bd8665fc45",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x5c4f swapped 1767773 USDT for 100000000000000000 UNI on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "1767773",
    "tokenAmount1": "100000000000000000",
    "tokenName0": "USDT",
    "tokenName1": "UNI",
  },
  "gasPaid": "0.017258154195087624",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1642499895,
  "tokensReceived": Array [
    Object {
      "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
      "amount": "0.1",
      "name": "Uniswap",
      "symbol": "UNI",
      "type": "unknown",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
      "amount": "1.767773",
      "name": "Tether USD",
      "symbol": "USDT",
      "type": "ERC20",
    },
  ],
  "txHash": "0x26854093b17b25f74bcdb8728a6c8d113e68aa69f2ae2463f9c14788df53aa45",
  "userAddress": "0x5c4f3b99c6c7be04bb2eac3f7bed560da85e0797",
  "userName": "0x5c4f",
}
`;

exports[`Interpreter 15`] = `
Object {
  "action": Array [
    "swapped",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xe592427a0aece92de3edee1f18e0157c05861564",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0xa5c1 swapped 340459702100000000000 RAE for 389162262040186058 WETH on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "340459702100000000000",
    "tokenAmount1": "389162262040186058",
    "tokenName0": "RAE",
    "tokenName1": "WETH",
  },
  "gasPaid": "0.0150073576790652",
  "nativeValueReceived": "0.38916226204018605772",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1656531693,
  "tokensReceived": Array [],
  "tokensSent": Array [
    Object {
      "address": "0xe5a3229ccb22b6484594973a03a3851dcd948756",
      "amount": "340.4597021",
      "name": "RAE Token",
      "symbol": "RAE",
      "type": "ERC20",
    },
  ],
  "txHash": "0x5efd5c0a1d3b1a0b42456aae4fc552e0924d8153f68196b011ef933b94614246",
  "userAddress": "0xa5c11f25f7b8eeaa531d31f4094e0f5b6e43a820",
  "userName": "0xa5c1",
}
`;

exports[`Interpreter 16`] = `
Object {
  "action": Array [
    "burned",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x0b96 burned Uniswap V3 liquidity position NFT #260993",
  "extra": Object {
    "tokenId": "260993",
  },
  "gasPaid": "0.002506870245171761",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1656483817,
  "tokensReceived": Array [],
  "tokensSent": Array [
    Object {
      "address": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
      "name": "Uniswap V3 Positions NFT-V1",
      "symbol": "UNI-V3-POS",
      "tokenId": "260993",
      "type": "ERC721",
    },
  ],
  "txHash": "0x1d2e706317c9457e43d4b0dfe6395c55b518f4f05386d1f455dd6ea984e04ae1",
  "userAddress": "0x0b96c91ab05629be9404746d5a7775f305a4f6a3",
  "userName": "0x0b96",
}
`;

exports[`Interpreter 17`] = `
Object {
  "action": Array [
    "collected",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "leotheprocess.eth collected 320644118148 HEX and 305165646 USDC in fees from Uniswap V3",
  "extra": Object {
    "tokenAmount0": "320644118148",
    "tokenAmount1": "305165646",
    "tokenName0": "HEX",
    "tokenName1": "USDC",
  },
  "gasPaid": "0.006987365045529792",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1646028442,
  "tokensReceived": Array [
    Object {
      "address": "0x2b591e99afe9f32eaa6214f7b7629768c40eeb39",
      "amount": "0.000000320644",
      "name": "HEX",
      "symbol": "HEX",
      "type": "ERC20",
    },
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "305.165646",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "tokensSent": Array [],
  "txHash": "0x8d696e7ac40e22c25207a6eb3060d840fe4b1b4663fb988500f3bfc311da2a39",
  "userAddress": "0xb7387207cefaeee263817780c60deb9b9742b3c8",
  "userName": "0xb738",
}
`;

exports[`Interpreter 18`] = `
Object {
  "action": Array [
    "added liquidity",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x6dd9 added liquidity to the gOHM-BTRFLY pool on Uniswap V3 ",
  "extra": Object {
    "tokenAmount0": "6305593205049249187",
    "tokenAmount1": "70956438934",
    "tokenName0": "gOHM",
    "tokenName1": "BTRFLY",
  },
  "gasPaid": "0.00551313628814904",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1653349230,
  "tokensReceived": Array [],
  "tokensSent": Array [
    Object {
      "address": "0x0ab87046fbb341d058f17cbc4c1133f25a20a52f",
      "amount": "6.305593205049",
      "name": "Governance OHM",
      "symbol": "gOHM",
      "type": "ERC20",
    },
    Object {
      "address": "0xc0d4ceb216b3ba9c3701b291766fdcba977cec3a",
      "amount": "0.000000070956",
      "name": "BTRFLY",
      "symbol": "BTRFLY",
      "type": "ERC20",
    },
  ],
  "txHash": "0xba7e346f46b1f5fa3bbff9868f1b6bf170b8fc8d212d2ad8e6f9fc84acdf30a1",
  "userAddress": "0x6dd91bdab368282dc4ea4f4befc831b78a7c38c0",
  "userName": "0x6dd9",
}
`;

exports[`Interpreter 19`] = `
Object {
  "action": Array [
    "minted",
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x57bd minted an NFT for adding 202480816 WBTC and 22999999914 USDC in liquidity to Uniswap V3",
  "extra": Object {
    "tokenAmount0": "202480816",
    "tokenAmount1": "22999999914",
    "tokenName0": "WBTC",
    "tokenName1": "USDC",
  },
  "gasPaid": "0.012234799351281643",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1656585855,
  "tokensReceived": Array [
    Object {
      "address": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
      "name": "Uniswap V3 Positions NFT-V1",
      "symbol": "UNI-V3-POS",
      "tokenId": "261722",
      "type": "ERC721",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0x2260fac5e5542a773aa44fbcfedf7c193bc2c599",
      "amount": "0.000000000202",
      "name": "Wrapped BTC",
      "symbol": "WBTC",
      "type": "ERC20",
    },
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "22999.999914",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "txHash": "0x8f97a7c09cb73c4da2de03f21bbf17c01f512a615da51a8bf721c4748b5f8475",
  "userAddress": "0x57bddbe968f67c416b5d97d285c7a48676655dd7",
  "userName": "0x57bd",
}
`;

exports[`Interpreter 20`] = `
Object {
  "action": "______TODO______",
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": null,
  "counterpartyName": null,
  "exampleDescription": "mrbayc.eth ______TODO______ ???",
  "extra": Object {},
  "gasPaid": "0.0102171187901338",
  "nativeValueReceived": "802.57273439268180936779",
  "nativeValueSent": "0",
  "reverted": null,
  "timestamp": 1656597816,
  "tokensReceived": Array [
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "287.925265",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "tokensSent": Array [],
  "txHash": "0xb38f55471c5a8539a605287b4116a4bf83a58261b3cfe00bc53337298003b9ae",
  "userAddress": "0x6b92686c40747c85809a6772d0eda8e22a77c60c",
  "userName": "mrbayc.eth",
}
`;

exports[`Interpreter 21`] = `
Object {
  "action": "minted",
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": null,
  "counterpartyName": null,
  "exampleDescription": "0x0950 minted UNI-V3-POS #261805 from Uniswap V3 Positions NFT-V1",
  "extra": Object {},
  "gasPaid": "0.02896727102188826",
  "nativeValueReceived": "0.0",
  "nativeValueSent": "186.99999999983515",
  "reverted": null,
  "timestamp": 1656597626,
  "tokensReceived": Array [
    Object {
      "address": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
      "name": "Uniswap V3 Positions NFT-V1",
      "symbol": "UNI-V3-POS",
      "tokenId": "261805",
      "type": "ERC721",
    },
  ],
  "tokensSent": Array [
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "195105.855359999987",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "txHash": "0x8dbab0967c491942e748c7fc305a3f9a3b2eb6c54c0dc48e1ba7f43babfc636a",
  "userAddress": "0x0950541696888bcfac9af6a5c479871d3e583cac",
  "userName": "0x0950",
}
`;
